Changes towards version 0.8:
- Added the MetaChron story to the no-voice Melnorme script (bug #43) - Alex

0.7.0:
- Build with debug info in strict-debug mode (bug #1127), from Scott A. Colcord
- Added spoken Slylandro probe coordinates (bug #732) - Nic, Alex
- Added the missing bits to the no-voice versions of Mycon, Syreen and
  Utwig dialogue (bug #327) - Alex
- Syreen dialog tree no longer resets after visiting the Syreen Vault
  for the very first time (bug #891) - Alex
- Fixed lander report at the Syreen Vault inconsistency (bug #1121) - Alex
- Added lander reports for Supox ruins and Ultron. The reports text
  is new content from TFB. (bug #1120) - Alex
- Fixed 'caster comm with Ilwrath after they die off (bug #850) - Alex
- Fixed Syreen Vault lander report infinite loop (bug #1118) - Alex
- Same captain names are used on both net sides (bug #989) - Alex
- Fixed sync loss in netplay games having duplicate ships (bug #1081) - Alex
- Fixed loading of melee.cfg (bug #1099) - Alex
- Fixed the 64KB size limitation on key-value files (bug #1112) - Alex
- Update download paths for the new SourceForge File Release system - Michael
- Fix UAC issues with installer for cleaner Vista/Win7 installs - Michael
- Fixed compilation with Netplay disabled (bug #1091), from Sze Howe Koh
- Fixed ship picking order after a simultaneous destruction, e.g.
  Shofixti picks last after Glory device (bugs #1087, #1088) - Alex
- Game no longer locks up after quickly escaping melee (bug #1003) - Alex
- Reset input delay upon leaving Supermelee (bug #1022) - Alex
- Properly account for simultaneous destruction of last ships
  in each fleet in Supermelee (bug #437) - Alex
- Do not match singular stars when given a prefix in star search
  (bug #1071) - Alex
- Preserve character case when editing with joystick (bug #1080) - Alex
- Fixed misaligned cargo count (bug #1092) - Coredev
- Fixed the network SuperMelee team configuration protocol - SvdB
- Fixed fuel reserve bounds checks - SvdB