@@ -58,6 +58,10 @@ extern ACTIVITY LastActivity;
 
 extern BYTE PlayerControl[];
 
+extern BOOLEAN usingSpeech;
+		// Actual speech presence indicator which decouples reality from
+		// the user option, thus the user option remains as pure intent
+
 BOOLEAN InitContexts (void);
 void UninitPlayerInput (void);
 BOOLEAN InitGameKernel (void);
